# loop-closure-toolbox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  setup.py
config/: sthereo_01_rgb_4_3.yaml  sthereo_07_rgb_4_3.yaml
python/: CMakeLists.txt  README.md  loopclosuretoolbox.cpp  pybind_utils.hpp  pydbow.cpp  pyvlad.cpp  test_pydbow.py  test_pyvlad.py
src/DBoW3/: CMakeLists.txt
src/DBoW3/include/: Database.h  DescManip.h  ScoringObject.h  Vocabulary.h
src/DBoW3/src/: Database.cpp  DescManip.cpp  Vocabulary.cpp
src/VLAD/: CMakeLists.txt
src/VLAD/include/: VLAD.h  VladDatabase.h  VladQueryResults.h  VladVector.h  VladVocabulary.h
src/VLAD/src/: VladDatabase.cpp  VladQueryResults.cpp  VladVocabulary.cpp
test/: CMakeLists.txt  README.md  test_database.cpp  test_dbow_database.cpp  test_dbow_transform.cpp  test_utils.h  test_vlad_database.cpp  test_vlad_transform.cpp  test_vocabulary.cpp
